--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         </activity>
         <activity android:name=".activity.MainActivity"></activity>
 
+
         <!--屏幕适配-->
+        <activity android:name=".screen_match.ScreenActivity"></activity>
         <!--屏幕适配 虚拟按键-->
         <!--屏幕适配  刘海屏-->
 
